# terraingen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
.github/workflows/: build-test-linux.yml  build-test-mac.yml  build-test-windows.yml  cmake-multi-platform.yml  tests-linux.yml  tests-mac.yml  tests-windows.yml
docs/: algorithms.md  getting-started.md  index.md  usage.md
gui-imgui/: CMakeLists.txt
gui-imgui/src/: glTexture.h  guiState.h  heightmapPreview.cpp  heightmapPreview.h  main.cpp  modifierControls.cpp  modifierControls.h  terrainControls.cpp  terrainControls.h
gui-slint/: Cargo.toml  build.rs
gui-slint/src/: convert_image.rs  lib_ffi.rs  main.rs
gui-slint/ui/: appwindow.slint  debug.slint  ds_panel.slint  export_panel.slint  export_type.slint  generator_layer.slint  generator_type.slint  hydraulic_erosion_panel.slint  layers_panel.slint  perlin_panel.slint
lib-terraingen/: CMakeLists.txt  data_types.cpp  data_types.h
lib-terraingen/export/: CMakeLists.txt  imageExport.cpp  imageExporter.cpp  imageExporter.h
lib-terraingen/generation/: CMakeLists.txt  generator.cpp  generator.h  generatorFactory.cpp  generatorFactory.h  generatorParameters.h  generatorTypes.h  terrainCombination.cpp  terrainCombination.h
lib-terraingen/generation/diamondsquare/: diamondSquare.cpp  diamondSquare.h  diamondSquareGenerator.cpp  diamondSquareGenerator.h
lib-terraingen/generation/flat/: flatTerrainGenerator.cpp  flatTerrainGenerator.h
lib-terraingen/generation/perlin/: perlin.cpp  perlin.h  perlinTerrainGenerator.cpp  perlinTerrainGenerator.h
lib-terraingen/modifiers/: CMakeLists.txt  modifier.h
lib-terraingen/modifiers/hydraulic/: hydraulicErosionModifier.cpp  hydraulicErosionModifier.h  particle.h
lib-terraingen/terrain/: terrain.cpp  terrain.h
src/: CMakeLists.txt  data_types.h  main.cpp
src/export/: CMakeLists.txt  imageExporter.cpp  imageExporter.h
src/generation/: CMakeLists.txt  generator.cpp  generator.h  generatorFactory.cpp  generatorFactory.h  generatorTypes.h  terrainCombination.cpp  terrainCombination.h
src/generation/diamondsquare/: diamondSquareGenerator.cpp  diamondSquareGenerator.h
src/generation/flat/: flatTerrainGenerator.cpp  flatTerrainGenerator.h
src/generation/perlin/: perlinTerrainGenerator.cpp  perlinTerrainGenerator.h
src/terrain/: terrain.cpp  terrain.h
test/: CMakeLists.txt  export.cpp  generator.cpp  generatorFactory.cpp  modifier.cpp  terrain.cpp  terrainCombination.cpp  test.cpp
test/helpers/: helpers.h
test/integration/: export.cpp  perlinExport.cpp
